# bpt8qvnb

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
cli/: __init__.py  commands.py  main.py
config/: __init__.py  settings.py
dsp/: Makefile
dsp/include/: crossfade_processor.hpp  dsp_engine.hpp  loop_extractor.hpp  similarity_detector.hpp
dsp/src/: crossfade_processor.cpp  dsp_engine.cpp  loop_extractor.cpp  main.cpp  similarity_detector.cpp
python/: __init__.py
python/genai/: __init__.py  client.py  music_generator.py  prompts.py
python/pipeline/: __init__.py  audio_processor.py  crossfade.py  rhythmic_pipeline.py  similarity.py  texture_pipeline.py
tests/: __init__.py  test_dsp.py  test_genai.py  test_pipeline.py
